--- a/default.conf
+++ b/default.conf
@@ -1,16 +1,17 @@
 server_tokens off;
-ssl_protocols TLSv1.3;
-# add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains';
-variables_hash_bucket_size 128;
+add_header X-Server $hostname;
 add_header X-Backend-Server $hostname;
 
+log_format docker '$sent_http_x_backend_server - $remote_addr $remote_user [$time_local] "$request" '
+                  '$status $body_bytes_sent "$http_referer" '
+                  '"$http_user_agent" "$http_x_forwarded_for"';
 server {
   listen 80 default_server;
-  listen [::]:80 default_server;
-  listen 443 ssl http2 default_server;
-  listen [::]:443 ssl http2 default_server;
 
   server_name _;
+
+  charset utf-8;
+  access_log /var/log/nginx/access.log docker;
 
   root /usr/share/nginx/html;
 
@@ -20,34 +21,8 @@ server {
     try_files $uri $uri/ $uri.html =404;
   }
 
-  ssl_certificate /usr/share/nginx/tls/wildcard.jsx.jp.cert;
-  ssl_certificate_key /usr/share/nginx/tls/wildcard.jsx.jp.key;
-  ssl_dhparam /usr/share/nginx/tls/dhparam.pem;
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-  ssl_ciphers EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH:AES128+EECDH:AES128+EDH;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_timeout 5m;
-  # ssl_stapling on;
-  # ssl_stapling_verify on;
-  # ssl_verify_client optional;
-  # ssl_client_certificate /usr/share/nginx/tls/client.crt;
-  if ($ssl_client_verify = SUCCESS) {
-    return 403 '<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>401 Unauthorized</title>
-  </head>
-  <body>
-  <div class="flex-center position-ref full-height">
-    <div class="content">
-      <div class="title m-b-md anim-bound">401 Unauthorized</div>
-    </div>
-  </div>
-  </body>
-</html>';
+  error_page 404 /404.html;
+  location = /404.html {
+    return 404 'not found';
   }
 }
